--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,33 @@
-version: "3"
+version: "3.7"
 
 services:
-  phoenix:
+  namenode:
+    image: woe1997/hadoop-2.7.7-namenode:1.0
+    container_name: namenode
+    ports:
+      - 127.0.0.1:50070:50070
+    volumes:
+      - hadoop_namenode_test:/hadoop/dfs/name
+    environment:
+      - CLUSTER_NAME=test
+    env_file:
+      - ./hadoop.env
+
+  datanode:
+    image: woe1997/hadoop-2.7.7-datanode:1.0
+    container_name: datanode
+    ports:
+      - 127.0.0.1:9864:9864
+    volumes:
+      - hadoop_datanode_test:/hadoop/dfs/data
+    environment:
+      SERVICE_PRECONDITION: "namenode:50070"
+    env_file:
+      - ./hadoop.env
+
+  hbase:
+    container_name: hbase
+    #image: woe1997/phoenix-5.0.0-hbase-2.0.6-standlone:1.0
     build:
       context: ./phoenix
       args:
@@ -9,5 +35,18 @@ services:
         - PHOENIX_VER=${PHOENIX_VER}
         - HBASE_VER=${HBASE_VER}
     ports:
+      - 127.0.0.1:2181:2181
       - 127.0.0.1:8765:8765
-    command: bin/queryserver.py
+    volumes:
+      - hbase_data_test:/hbase-data
+      - hbase_zookeeper_data_test:/zookeeper-data
+    environment:
+      SERVICE_PRECONDITION: "namenode:50070 datanode:50075"
+    env_file:
+      - ./hbase-standalone.env
+
+volumes:
+  hadoop_namenode_test:
+  hadoop_datanode_test:
+  hbase_data_test:
+  hbase_zookeeper_data_test:
