--- a/hbase-standalone.env
+++ b/hbase-standalone.env
@@ -7,6 +7,7 @@ HBASE_CONF_hbase_master_port=16000
 HBASE_CONF_hbase_master_info_port=16010
 HBASE_CONF_hbase_regionserver_port=16020
 HBASE_CONF_hbase_regionserver_info_port=16030
+HBASE_CONF_hbase_regionserver_wal_codec=org.apache.hadoop.hbase.regionserver.wal.IndexedWALEditCodec
 HBASE_CONF_hbase_zookeeper_peerport=2888
 HBASE_CONF_hbase_zookeeper_leaderport=3888
 HBASE_CONF_hbase_zookeeper_property_clientPort=2181
